fix: Resolve Issues - Set Cursor to Pointer on Mobile Item Toggler Label - Remove NavigationBar Dependency on Current NavItem

--- a/components/Containers/NavigationBar/index.module.css
+++ b/components/Containers/NavigationBar/index.module.css
@@ -51,6 +51,7 @@
 
 .sidebarItemTogglerLabel {
   @apply block
+    cursor-pointer
     md:hidden;
 }
 
@@ -58,7 +59,8 @@
   @apply hidden
     flex-1
     md:flex
-    md:flex-row;
+    md:flex-row
+    md:items-center;
 }
 
 .navItems {
@@ -77,6 +79,7 @@
 
 .actionsWrapper {
   @apply flex
+    items-center
     gap-2
     border-b
     border-neutral-200
@@ -87,7 +90,9 @@
 }
 
 .ghIconWrapper {
-  @apply rounded-md
+  @apply h-9
+    w-9
+    rounded-md
     p-2;
 
   svg {
